fix: add javadoc, refactoring